public/assets/stylesheets/style.css
/* ... */
#responsive-navigation ul .icon {
  display: none;
}
#responsive-navigation input:checked + label::before {
  background-repeat: no-repeat;
  content: ' ';
  display: inline-block;
  height: 24px;
  margin-right: 0;
  background-image: url("../images/icons/white/arr_1down.svg");
  -webkit-background-size: 24px 24px;
  -moz-background-size: 24px 24px;
  -o-background-size: 24px 24px;
  background-size: 24px 24px;
  vertical-align: text-top;
  width: 24px;
}
.csstransforms #responsive-navigation input:checked + label::before {
  background-repeat: no-repeat;
  content: ' ';
  display: inline-block;
  height: 24px;
  margin-right: 0;
  background-image: url("../images/icons/white/arr_1right.svg");
  -webkit-background-size: 24px 24px;
  -moz-background-size: 24px 24px;
  -o-background-size: 24px 24px;
  background-size: 24px 24px;
  vertical-align: text-top;
  width: 24px;
}
.csstransforms #responsive-navigation input:checked + label:before {
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  transform: rotate(90deg);
}
#responsive-navigation input:checked + label + ul {
  max-height: 600px;
}
#responsive-navigation input:checked + label + ul > li {
  background-color: rgba(123, 140, 167, 0.6);
}
#barBottomright #sidebar-menu {
  cursor: pointer;
  display: none;
  margin: 0 5px;
  vertical-align: top;
}
#barBottomright #sidebar-menu::before {
  background-repeat: no-repeat;
  content: ' ';
  display: inline-block;
  height: 20px;
  margin-right: 0;
  background-image: url("../images/icons/white/hamburger-icon-small.svg");
  -webkit-background-size: 20px 20px;
  -moz-background-size: 20px 20px;
  -o-background-size: 20px 20px;
  background-size: 20px 20px;
  vertical-align: text-top;
  width: 20px;
}
@media screen and (min-width: 800px) {
  .responsive-visible {
    display: none;
  }
}
@media screen and (max-width: 800px) {
  #header,
  #barTopFont,
  #barTopMenu,
  #barBottomLeft .current_page,
  #barBottommiddle,
  #barBottomLeft,
  #barBottomArrow,
  #tabs,
  .sidebar-image,
  #sidebar-navigation,
  #quicksearch,
  #layout_footer,
  li#quicksearch_item {
    display: none !important;
  }
  .responsive-hidden {
    display: none;
  }
  #notification_marker {
    display: inline-block;
    margin-top: 0;
    vertical-align: initial;
  }
  #barBottomContainer {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    height: 35px;
    position: fixed;
    top: 0;
  }
  #barBottomright,
  #barBottomright ul {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    flex: 1;
  }
  #barBottomright {
    flex: 1 !important;
  }
  #barBottomright #sidebar-menu {
    display: inline-block;
  }
  #barBottomright .list {
    margin-top: 2px;
    width: 300px;
    max-width: 300px;
  }
  #barBottomright .list.below {
    left: -280px;
  }
  #barBottomright .list.below:before {
    left: 288px;
  }
  #notification_list {
    width: 100% !important;
    position: absolute !important;
    left: 0 !important;
    box-sizing: border-box !important;
    max-width: inherit !important;
  }
  #notification_list:before {
    display: none !important;
    opacity: 0;
  }
  #notification_container {
    position: inherit !important;
  }
  #responsive-container {
    display: block;
  }
  #layout_page {
    margin-left: 0;
    margin-right: 0;
  }
  #layout_page,
  #layout_container,
  #barBottomContainer,
  #flex-header,
  #layout_content {
    min-width: inherit !important;
  }
  #layout_content {
    margin: 0px 4px;
  }
  .visible-sidebar {
    right: 0 !important;
    -webkit-transition: right 300ms;
    -moz-transition: right 300ms;
    -o-transition: right 300ms;
    transition: right 300ms;
  }
  #layout-sidebar {
    background-color: #1f4171;
    background-image: -moz-linear-gradient(left, #365a90, #1f4171);
    background-image: -webkit-gradient(linear, 0 0, 100% 0, from(#365a90), to(#1f4171));
    background-image: -webkit-linear-gradient(left, #365a90, #1f4171);
    background-image: -o-linear-gradient(left, #365a90, #1f4171);
    background-image: linear-gradient(to right, #365a90, #1f4171);
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff365a90', endColorstr='#ff1f4171', GradientType=1);
    -webkit-background-clip: content-box;
    -moz-background-clip: content-box;
    background-clip: content-box;
    -webkit-transition: right 300ms;
    -moz-transition: right 300ms;
    -o-transition: right 300ms;
    transition: right 300ms;
    position: fixed;
    top: 35px;
    right: -276px;
    bottom: 0;
    width: 270px;
    overflow: hidden;
    overflow-y: auto;
    z-index: 10000;
    border-left: 6px solid rgba(0, 0, 0, 0.5);
  }
  #layout-sidebar .sidebar {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    top: auto !important;
    width: 270px !important;
    background: inherit;
    border: 0;
  }
  #layout-sidebar .sidebar:before {
    border: 0 !important;
  }
  #layout-sidebar .widget-links li.active {
    margin-right: 0;
  }
  #layout-sidebar .widget-links li.active:before,
  #layout-sidebar .widget-links li.active:after {
    display: none;
  }
}
.studip_form .caption {
  font-weight: bold;
  color: #28497c;
  font-size: 11pt;
}
.studip_form label {
  display: block;
}
.studip_form label input[type=date],
.studip_form label input[type=email],
.studip_form label input[type=number],
.studip_form label input[type=password],
.studip_form label input[type=text],
.studip_form label input[type=url],
.studip_form label textarea,
.studip_form label select {
  display: block;
  min-width: 24em;
}
.studip_form label input[type=number] {
  min-width: 1ex !important;
}
.studip_form label textarea {
  min-height: 6em;
}
/* ... */

